# osgearth_osx

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  build.sh  main.cpp
patches/osg/: 0001-Fix-for-warning-about-gl.h-and-gl3.h-being-included.patch
patches/osgearth/: 0001-Fixes-for-MacOS-on-Apple-Silicon.patch  0001-macos-fixes.patch
